Created new items under beverages navigations page with the add to cart button and relevant images and beverage descriptions

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/insalata.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <img src="images/insalata.jpg" alt="insalata-Image" class="cardImage cardItem">
                             <span class="food-details card_component">
                               <span class="foodname foodtitle">Insalata Di Pollo</span><br><br>Gently poached Chicken
                                served with mixed lettuce leaves, cherry tomatoes olives, red onions
@@ -186,7 +186,7 @@
 
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/caesar.png" alt="Pizza-Image" class="cardImage cardItem">
+                            <img src="images/caesar.png" alt="ceaser-Image" class="cardImage cardItem">
                             <span class="food-details card_component">
                               <span class="foodname foodtitle">Caesar Salad</span><br><br>ll the usual suspects including Cos lettuce,
                               Bacon and house-made Croutons,topped off with a drizzling of Caesar dressing, poached Egg, Anchovies and Parmesan.<br>
@@ -201,7 +201,7 @@
 
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/vegetariano.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <img src="images/vegetariano.jpg" alt="vefetariano-Image" class="cardImage cardItem">
                             <span class="food-details card_component">
                               <span class="foodname foodtitle">Tutto Vegetariano</span><br><br>Roasted Zucchini and Eggplant, mixed leaf salad with
                                pine nuts and balsamic vinaigrette.<br>
@@ -216,7 +216,7 @@
 
                         <div id="menu_item" class="menu_item">
                           <div class="food_item">
-                            <img src="images/garden.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                            <img src="images/garden.jpg" alt="gardensalad-Image" class="cardImage cardItem">
                             <span class="food-details card_component">
                               <span class="foodname foodtitle">Garden Salad</span><br><br>Mixed lettuce leaves with cherry tomatoes, capsicum, celery, red onion, carrot, olives.<br>
                               <strong>Available for Pick up Only</strong><br><br>
@@ -239,7 +239,67 @@
 
                     <div id="" class="menu">
 
+                        <div class="cardItems">
 
+                          <div id="menu_item" class="menu_item">
+                            <div class="food_item">
+                              <img src="images/pellegrino.jpg" alt="San-Pellegrino-Image" class="cardImage cardItem">
+                              <span class="food-details card_component">
+                                <span class="foodname foodtitle">San Pellegrino</span><br><br>330ml Cans<br>
+                                <strong>Available for online order or delivery</strong><br><br>
+                                <span class="foodprice card_component">$4.50</span><br>
+                              </span>
+                              <div class="cardBar cardItem card_component">
+                                <button class="addtocart-btn" type="button">Add</button>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div id="menu_item" class="menu_item">
+                            <div class="food_item">
+                              <img src="images/bundaberg.jpg" alt="Bundaberg-Image" class="cardImage cardItem">
+                              <span class="food-details card_component">
+                                <span class="foodname foodtitle">Bundaberg</span><br><br>375ml Cans<br>
+                                <strong>Available for delivery and Pick up</strong><br><br>
+                                <span class="foodprice card_component">$4.50</span><br>
+                              </span>
+                              <div class="cardBar cardItem card_component">
+                                <button class="addtocart-btn" type="button">Add</button>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div id="menu_item" class="menu_item">
+                            <div class="food_item">
+                              <img src="images/coke.jpg" alt="Coca-Cola-Image" class="cardImage cardItem">
+                              <span class="food-details card_component">
+                                <span class="foodname foodtitle">Coca-Cola</span><br><br>
+                                375ml bottles available<br>
+                                <strong>Available for Pick up only</strong><br><br>
+                                <span class="foodprice card_component">$4.00</span><br>
+                              </span>
+                              <div class="cardBar cardItem card_component">
+                                <button class="addtocart-btn" type="button">Add</button>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div id="menu_item" class="menu_item">
+                            <div class="food_item">
+                              <img src="images/schweppes.jpg" alt="Schweppes-Image" class="cardImage cardItem">
+                              <span class="food-details card_component">
+                                <span class="foodname foodtitle">Schweppes</span><br><br>
+                                375ml bottles available<br>
+                                <strong>Available for Delivery and Pick up</strong><br><br>
+                                <span class="foodprice card_component">$4.00</span><br>
+                              </span>
+                              <div class="cardBar cardItem card_component">
+                                <button class="addtocart-btn" type="button">Add</button>
+                              </div>
+                            </div>
+                          </div>
+
+                        </div>
 
                     </div>
                 </section>
