created new items under the final menu navigation of mains with relevant add to cart buttons and item descriptions and images

--- a/index.html
+++ b/index.html
@@ -310,7 +310,72 @@
 
                     <div id="" class="menu">
 
+                      <div class="cardItems">
 
+                        <div id="menu_item" class="menu_item">
+                          <div class="food_item">
+                            <img src="images/calamari.jpg" alt="calamari-Image" class="cardImage cardItem">
+                            <span class="food-details card_component">
+                              <span class="foodname foodtitle">Calamari Fritti</span><br><br>
+                              Lightly dusted in flour, seasoned and fried in hot olive oil and served with fresh
+                              lemon, house made Tartar sauce, Garden Salad and chips.<br>
+                              <strong>Available for online order or delivery</strong><br><br>
+                              <span class="foodprice card_component">$30.00</span><br>
+                            </span>
+                            <div class="cardBar cardItem card_component">
+                              <button class="addtocart-btn" type="button">Add</button>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div id="menu_item" class="menu_item">
+                          <div class="food_item">
+                            <img src="images/chickensch.jpg" alt="chickensch-Image" class="cardImage cardItem">
+                            <span class="food-details card_component">
+                              <span class="foodname foodtitle">Italian style Chicken Schnitzel</span><br><br>
+                              Topped with our own Napoli and Parmesan sauce and served with a Garden Salad and Chips<br>
+                              <strong>Available for delivery and Pick up</strong><br><br>
+                              <span class="foodprice card_component">$26.00</span><br>
+                            </span>
+                            <div class="cardBar cardItem card_component">
+                              <button class="addtocart-btn" type="button">Add</button>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div id="menu_item" class="menu_item">
+                          <div class="food_item">
+                            <img src="images/sicilianprawns.jpg" alt="Sicilian-Prawns-Image" class="cardImage cardItem">
+                            <span class="food-details card_component">
+                              <span class="foodname foodtitle">Spicy Sicilian Prawns</span><br><br>
+                              Partly shelled prawns lightly dusted in seasoned flour and pan fried served
+                              on a bed of Italian Herb and Olive Cous Cous<br>
+                              <strong>Available for Pick up only</strong><br><br>
+                              <span class="foodprice card_component">$30.00</span><br>
+                            </span>
+                            <div class="cardBar cardItem card_component">
+                              <button class="addtocart-btn" type="button">Add</button>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div id="menu_item" class="menu_item">
+                          <div class="food_item">
+                            <img src="images/porkscallopini.jpg" alt="Pork-Scallopini-Image" class="cardImage cardItem">
+                            <span class="food-details card_component">
+                              <span class="foodname foodtitle">Pork Scallopini with Sherry Mushroom Sauce</span><br><br>
+                              Delicate pieces of thinly sliced Pork topped with a creamy Sherry and Mushroon Sauce served with garden fresh Vegetables
+                              and Potatoes<br>
+                              <strong>Available for Delivery and Pick up</strong><br><br>
+                              <span class="foodprice card_component">$30.00</span><br>
+                            </span>
+                            <div class="cardBar cardItem card_component">
+                              <button class="addtocart-btn" type="button">Add</button>
+                            </div>
+                          </div>
+                        </div>
+
+                      </div>
 
                     </div>
                 </section>
