--- a/index.html
+++ b/index.html
@@ -175,12 +175,11 @@
                             <img src="images/insalata.jpg" alt="insalata-Image" class="cardImage cardItem">
                             <span class="food-details card_component">
                               <span class="foodname foodtitle">Insalata Di Pollo</span><br><br>Gently poached Chicken
-                               served with mixed lettuce leaves, cherry tomatoes olives, red onions
+                               served with mixed lettuce leaves, cherry tomatoes olives, red onions<br>
+                              <strong>Available for delivery and Pick up</strong><br><br>
                               <span class="foodprice card_component">$24.00</span><br>
+                            <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                             </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
-                            </div>
                           </div>
                         </div>
 
@@ -192,10 +191,8 @@
                               Bacon and house-made Croutons,topped off with a drizzling of Caesar dressing, poached Egg, Anchovies and Parmesan.<br>
                               <strong>Available for delivery and Pick up</strong><br><br>
                               <span class="foodprice card_component">$22.00</span><br>
+                              <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                             </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
-                            </div>
                           </div>
                         </div>
 
@@ -207,10 +204,8 @@
                                pine nuts and balsamic vinaigrette.<br>
                               <strong>Available for Pick up only</strong><br><br>
                               <span class="foodprice card_component">$22.00</span><br>
+                              <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                             </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
-                            </div>
                           </div>
                         </div>
 
@@ -221,10 +216,8 @@
                               <span class="foodname foodtitle">Garden Salad</span><br><br>Mixed lettuce leaves with cherry tomatoes, capsicum, celery, red onion, carrot, olives.<br>
                               <strong>Available for Pick up Only</strong><br><br>
                               <span class="foodprice card_component">$15.00</span><br>
+                              <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                             </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
-                            </div>
                           </div>
                         </div>
 
