edited the add to cart button position in menu items to make it responsive

--- a/index.html
+++ b/index.html
@@ -241,10 +241,8 @@
                                 <span class="foodname foodtitle">San Pellegrino</span><br><br>330ml Cans<br>
                                 <strong>Available for online order or delivery</strong><br><br>
                                 <span class="foodprice card_component">$4.50</span><br>
+                                <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                               </span>
-                              <div class="cardBar cardItem card_component">
-                                <button class="addtocart-btn" type="button">Add</button>
-                              </div>
                             </div>
                           </div>
 
@@ -255,10 +253,8 @@
                                 <span class="foodname foodtitle">Bundaberg</span><br><br>375ml Cans<br>
                                 <strong>Available for delivery and Pick up</strong><br><br>
                                 <span class="foodprice card_component">$4.50</span><br>
+                                <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                               </span>
-                              <div class="cardBar cardItem card_component">
-                                <button class="addtocart-btn" type="button">Add</button>
-                              </div>
                             </div>
                           </div>
 
@@ -270,10 +266,8 @@
                                 375ml bottles available<br>
                                 <strong>Available for Pick up only</strong><br><br>
                                 <span class="foodprice card_component">$4.00</span><br>
+                                <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                               </span>
-                              <div class="cardBar cardItem card_component">
-                                <button class="addtocart-btn" type="button">Add</button>
-                              </div>
                             </div>
                           </div>
 
@@ -285,10 +279,8 @@
                                 375ml bottles available<br>
                                 <strong>Available for Delivery and Pick up</strong><br><br>
                                 <span class="foodprice card_component">$4.00</span><br>
+                                <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                               </span>
-                              <div class="cardBar cardItem card_component">
-                                <button class="addtocart-btn" type="button">Add</button>
-                              </div>
                             </div>
                           </div>
 
@@ -314,10 +306,8 @@
                               lemon, house made Tartar sauce, Garden Salad and chips.<br>
                               <strong>Available for online order or delivery</strong><br><br>
                               <span class="foodprice card_component">$30.00</span><br>
+                              <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                             </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
-                            </div>
                           </div>
                         </div>
 
@@ -329,10 +319,8 @@
                               Topped with our own Napoli and Parmesan sauce and served with a Garden Salad and Chips<br>
                               <strong>Available for delivery and Pick up</strong><br><br>
                               <span class="foodprice card_component">$26.00</span><br>
+                              <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                             </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
-                            </div>
                           </div>
                         </div>
 
@@ -345,10 +333,8 @@
                               on a bed of Italian Herb and Olive Cous Cous<br>
                               <strong>Available for Pick up only</strong><br><br>
                               <span class="foodprice card_component">$30.00</span><br>
+                              <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                             </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
-                            </div>
                           </div>
                         </div>
 
@@ -361,10 +347,8 @@
                               and Potatoes<br>
                               <strong>Available for Delivery and Pick up</strong><br><br>
                               <span class="foodprice card_component">$30.00</span><br>
+                              <button class="addtocart-btn cardItem card_component" type="button">Add</button>
                             </span>
-                            <div class="cardBar cardItem card_component">
-                              <button class="addtocart-btn" type="button">Add</button>
-                            </div>
                           </div>
                         </div>
 
