--- a/index.html
+++ b/index.html
@@ -449,8 +449,15 @@
                     <li class="footeritem"><a href ="https://www.instagram.com/" class="footericon"><i class = "fab fa-instagram"></i></a></li>
                     <li class="footeritem"><a href = "https://www.google.com.au/" class="footericon"><i class = "fab fa-google"></i></a></li>
                     <li class="footeritem"><a href = "https://www.youtube.com/" class="footericon"><i class = "fab fa-youtube"></i></a></li>
+                    <li class ="footeritem"><a href="https://twitter.com/"><i class ="fab fa-twitter"></i></a></li>
+                    <li  class="footeritem"><a href = "https://fanniebaysuperpizza.com/"></a><i
+                        class ="fas fa-envelope"></i></a></li>
+                    <li  class="footeritem" ><a
+                            href = "https://fanniebaysuperpizza.com/"></a><i
+                            class ="fa fa-phone"></i></a></li>
+
                 </ul>
-                    <div class="footer1">
+                    <div class="footer1"><br>
                       <a href ="https://fanniebaysuperpizza.com/" class="footerbottom">FanniePizza</a>
                       <a href="#privacypolicy" class="footerbottom">| Privacy Policy</a>
                     </div>
