Revert "Updated the colours in each item in order online page and changed the position of main nav bar"
This reverts commit 35ff4a2fd7964b866e1a3d16fb366e0e0442a51e.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <body>
       <article class="site-navigation">
         <header>
-          <div class="position">
           <a href="#" class="logo">Fannie Bays</a>
           <div class="navigation-toggle"></div>
           <nav class="sitenavigation">
@@ -25,7 +24,6 @@
             </ul>
           </nav>
           <div class="clearfix"></div>
-          </div>
         </header>
       </article>
 
@@ -43,7 +41,7 @@
 
         <section id="pizza" class="order_item">
 
-            <h2 class="foodnametopic">Pizza</h2>
+            <h2>Pizza</h2>
 
             <div class="menu">
               <div class="cardItems">
@@ -66,7 +64,7 @@
                     <div class="cardItem">
                       <img src="images/peperonipizza.PNG" alt="Pizza-Image" class="cardImage cardItem">
                     </div>
-
+                    
                     <span class="food-details card_component">
                       <span class="foodname foodtitle">Pepperoni Pizza</span><br><br>Tomato Base with Pepperoni and Mozarella<br>
                       <strong>Available for delivery and Pick up</strong><br><br>
