Edits on home page

--- a/html/home.html
+++ b/html/home.html
@@ -35,11 +35,17 @@
           </article>
 
           <article class="description">
+            <div class="menu">
+              <div class="cardItems">
 
+
+
+              </div>
+            </div>
           </article>
 
           <article class="aboutussection">
-            
+
           </article>
 
 
