--- a/html/HomePage.html
+++ b/html/HomePage.html
@@ -2,8 +2,8 @@
 <html lang = "en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="styles/style.css">
-        <title>Online Order</title>
+        <link rel="stylesheet" href="../styles/style.css" type="text/css">
+        <title>Home</title>
         <meta name="viewport" content="width=device-width initial-scale = 1">
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -70,7 +70,7 @@
       </div>
   </body>
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="scripts/script.js"></script>
+  <script type="text/javascript" src="/scripts/script.js"></script>
   <script src="scripts/online_ordering_and_main_navigation.js" type="text/javascript"></script>
 
   </html>
