--- a/html/HomePage.html
+++ b/html/HomePage.html
@@ -38,7 +38,23 @@
             <div class="menu">
               <div class="cardItems">
 
+                <div class="menu_item">
+                  <div class="food_item">
 
+                    <span class="food-details card_component">
+                      nvjdonvoavano
+                    </span>
+                  </div>
+                </div>
+
+                <div class="menu_item">
+                  <div class="food_item">
+
+                    <span class="food-details card_component">
+                      nvjdonvoavano
+                    </span>
+                  </div>
+                </div>
 
               </div>
             </div>
@@ -70,7 +86,7 @@
       </div>
   </body>
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="/scripts/script.js"></script>
-  <script src="scripts/online_ordering_and_main_navigation.js" type="text/javascript"></script>
+  <script type="text/javascript" src="../scripts/script.js"></script>
+  <script src="../scripts/online_ordering_and_main_navigation.js" type="text/javascript"></script>
 
   </html>
