Updated the main nav bar in two pages and updated the file structure

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <nav class="sitenavigation">
             <ul>
               <li><a href="#homepagelink">Home</a></li>
-              <li><a href="#onlineorderpagelink" class="active">Order Online</a></li>
+              <li><a href="#onlineorderpagelink">Order Online</a></li>
               <li><a href="#bookingreservationlink">Booking Reservation</a></li>
               <li><a href="#cateringpagelink">Catering</a></li>
               <li><a href="#moreoptionslink">More Options</a></li>
@@ -62,7 +62,7 @@
                         <div class="cardItem">
                           <img src="images/peperonipizza.PNG" alt="Pizza-Image" class="cardImage cardItem">
                         </div>
-                        
+
                         <span class="food-details card_component">
                           <span class="foodname foodtitle">Pepperoni Pizza</span><br><br>Tomato Base with Pepperoni and Mozarella<br>
                           <strong>Available for delivery and Pick up</strong><br><br>
