linked all images in online orderpage

--- a/html/onlineorder.html
+++ b/html/onlineorder.html
@@ -46,7 +46,7 @@
                     <div id="menu_item" class="menu_item">
                       <div class="food_item">
                         <div class="cardItem">
-                          <img src="images/hawaiyanpizza.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
+                          <img src="../images/hawaiyanpizza.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
                         </div>
                         <span class="food-details card_component">
                           <span class="foodname foodtitle">Hawaiian Pizza</span><br><br>Tomato Base with Ham, Pineappple and Mozzarella<br>
@@ -60,7 +60,7 @@
                     <div id="menu_item" class="menu_item">
                       <div class="food_item">
                         <div class="cardItem">
-                          <img src="images/peperonipizza.PNG" alt="Pizza-Image" class="cardImage cardItem">
+                          <img src="../images/peperonipizza.PNG" alt="Pizza-Image" class="cardImage cardItem">
                         </div>
 
                         <span class="food-details card_component">
@@ -75,7 +75,7 @@
                     <div id="menu_item" class="menu_item">
                       <div class="food_item">
                         <div class="cardItem">
-                          <img src="images/bbqpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                          <img src="../images/bbqpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
                         </div>
                         <span class="food-details card_component">
                           <span class="foodname foodtitle">BBQ Chicken Pizza</span><br><br>BBQ Base with Chicken and Mozarella<br>
@@ -89,7 +89,7 @@
                     <div id="menu_item" class="menu_item">
                       <div class="food_item">
                         <div class="cardItem">
-                          <img src="images/prawnpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
+                          <img src="../images/prawnpizza.jpg" alt="Pizza-Image" class="cardImage cardItem">
                         </div>
                         <span class="food-details card_component">
                           <span class="foodname foodtitle">Garlic Prawn Pizza</span><br><br>Garlic Butter Base, prawns, fetta, shallots, aioli and Mozarella<br>
@@ -115,7 +115,7 @@
                     <div id="menu_item" class="menu_item">
                       <div class="food_item">
                         <div class="cardItem">
-                          <img src="images/spaghettibolognese.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
+                          <img src="../images/spaghettibolognese.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
                         </div>
                         <span class="food-details card_component">
                           <span class="foodname foodtitle">Spaghetti Alla Bolognese</span><br><br>Traditional slow
@@ -130,7 +130,7 @@
                     <div id="menu_item" class="menu_item">
                       <div class="food_item">
                         <div class="cardItem">
-                          <img src="images/spaghetticarbonara.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
+                          <img src="../images/spaghetticarbonara.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
                         </div>
                         <span class="food-details card_component">
                           <span class="foodname foodtitle">Spaghetti Alla Carbonara</span><br><br>Creamy sauce of Bacon, Egg and Cheese.<br>
@@ -144,7 +144,7 @@
                     <div id="menu_item" class="menu_item">
                       <div class="food_item">
                         <div class="cardItem">
-                          <img src="images/ravioli.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
+                          <img src="../images/ravioli.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
                         </div>
                         <span class="food-details card_component">
                           <span class="foodname foodtitle">Ravioli</span><br><br>Pillows of meat filled with pasta topped
@@ -159,7 +159,7 @@
                     <div id="menu_item" class="menu_item">
                       <div class="food_item">
                         <div class="cardItem">
-                          <img src="images/lasangne.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
+                          <img src="../images/lasangne.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
                         </div>
                         <span class="food-details card_component">
                           <span class="foodname foodtitle">Lasagne</span><br><br>Traditional Italian dish of stacked layers of pasta alternated with our rich Beef Ragu,
@@ -187,7 +187,7 @@
                     <div id="menu_item" class="menu_item">
                       <div class="food_item">
                         <div class="cardItem">
-                          <img src="images/insalata.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
+                          <img src="../images/insalata.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
                         </div>
                         <span class="food-details card_component">
                           <span class="foodname foodtitle">Insalata Di Pollo</span><br><br>Gently poached Chicken
@@ -202,7 +202,7 @@
                     <div id="menu_item" class="menu_item">
                       <div class="food_item">
                         <div class="cardItem">
-                          <img src="images/caesar.png" alt="hawaiyanpizza-Image" class="cardImage cardItem">
+                          <img src="../images/caesar.png" alt="hawaiyanpizza-Image" class="cardImage cardItem">
                         </div>
                         <span class="food-details card_component">
                           <span class="foodname foodtitle">Caesar Salad</span><br><br>ll the usual suspects including Cos lettuce,
@@ -217,7 +217,7 @@
                     <div id="menu_item" class="menu_item">
                       <div class="food_item">
                         <div class="cardItem">
-                          <img src="images/vegetariano.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
+                          <img src="../images/vegetariano.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
                         </div>
                         <span class="food-details card_component">
                           <span class="foodname foodtitle">Tutto Vegetariano</span><br><br>Roasted Zucchini and Eggplant, mixed leaf salad with
@@ -232,7 +232,7 @@
                     <div id="menu_item" class="menu_item">
                       <div class="food_item">
                         <div class="cardItem">
-                          <img src="images/garden.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
+                          <img src="../images/garden.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
                         </div>
                         <span class="food-details card_component">
                           <span class="foodname foodtitle">Garden Salad</span><br><br>Mixed lettuce leaves with cherry tomatoes, capsicum, celery, red onion, carrot, olives.<br>
@@ -259,7 +259,7 @@
                       <div id="menu_item" class="menu_item">
                         <div class="food_item">
                           <div class="cardItem">
-                            <img src="images/pellegrino.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
+                            <img src="../images/pellegrino.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
                           </div>
                           <span class="food-details card_component">
                             <span class="foodname foodtitle">San Pellegrino</span><br><br>330ml Cans<br>
@@ -273,7 +273,7 @@
                       <div id="menu_item" class="menu_item">
                         <div class="food_item">
                           <div class="cardItem">
-                            <img src="images/bundaberg.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
+                            <img src="../images/bundaberg.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
                           </div>
                           <span class="food-details card_component">
                             <span class="foodname foodtitle">Bundaberg</span><br><br>375ml Cans<br>
@@ -287,7 +287,7 @@
                       <div id="menu_item" class="menu_item">
                         <div class="food_item">
                           <div class="cardItem">
-                            <img src="images/coke.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
+                            <img src="../images/coke.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
                           </div>
                           <span class="food-details card_component">
                             <span class="foodname foodtitle">Coca-Cola</span><br><br>
@@ -315,7 +315,7 @@
                     <div id="menu_item" class="menu_item">
                       <div class="food_item">
                         <div class="cardItem">
-                          <img src="images/calamari.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
+                          <img src="../images/calamari.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
                         </div>
                         <span class="food-details card_component">
                           <span class="foodname foodtitle">Calamari Fritti</span><br><br>
@@ -331,7 +331,7 @@
                     <div id="menu_item" class="menu_item">
                       <div class="food_item">
                         <div class="cardItem">
-                          <img src="images/chickensch.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
+                          <img src="../images/chickensch.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
                         </div>
                         <span class="food-details card_component">
                           <span class="foodname foodtitle">Italian style Chicken Schnitzel</span><br><br>
@@ -346,7 +346,7 @@
                     <div id="menu_item" class="menu_item">
                       <div class="food_item">
                         <div class="cardItem">
-                          <img src="images/sicilianprawns.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
+                          <img src="../images/sicilianprawns.jpg" alt="hawaiyanpizza-Image" class="cardImage cardItem">
                         </div>
                         <span class="food-details card_component">
                           <span class="foodname foodtitle">Spicy Sicilian Prawns</span><br><br>
@@ -362,7 +362,7 @@
                     <div id="menu_item" class="menu_item">
                       <div class="food_item">
                         <div class="cardItem">
-                          <img src="images/porkscallopini.jpg" alt="hawaiyanpizza-Image"  class = "cardImage cardItem">
+                          <img src="../images/porkscallopini.jpg" alt="hawaiyanpizza-Image"  class = "cardImage cardItem">
                         </div>
                         <span class="food-details card_component">
                           <span class="foodname foodtitle">Pork Scallopini with Sherry Mushroom Sauce</span><br><br>
