--- a/pages/reservations.html
+++ b/pages/reservations.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="height=device-height, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <title>Home</title>
+    <title>Online Reservation</title>
 </head>
 <body>
     <article class="site-navigation">
@@ -40,7 +40,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, modi voluptatem dolor similique veritatis eaque minus officia quasi maxime quas pariatur illum dolorem excepturi iure provident blanditiis nisi delectus sapiente!</p>
             </div>
         </div>
-        <img src="../images/hero_slider/homepage.jpg">
+        <img src="../images/hero_slider/reservation.jpg">
         <div class="slider_shade">
         </div>
     </div>
@@ -68,7 +68,7 @@
 </body>
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="scripts/Kanish_jQuery_script.js"></script>
-<script src="scripts/online_ordering_and_main_navigation.js" type="text/javascript"></script>
+<script type="text/javascript" src="../scripts/Kanish_jQuery_script.js"></script>
+<script src="../scripts/online_ordering_and_main_navigation.js" type="text/javascript"></script>
 </body>
 </html>
