created unique section header and styles

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         </div>
     </div>
     <div class="unique_content">
-        <h2>Book a Table</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, facilis, atque possimus quasi cupiditate sint expedita dicta mollitia porro ex ad commodi numquam et odit nulla doloribus velit sequi harum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nihil debitis beatae ex dolorum?!</p>
+        <h2>Current Store Deals</h2>
+
     </div>
     <footer class = "container">
         <ul class = "dec">
