created special deal cards in the homepage unique section

--- a/index.html
+++ b/index.html
@@ -48,8 +48,51 @@
         <div class="slider_shade">
         </div>
     </div>
-    <div class="unique_content">
+    <div class="home_unique_content">
         <h2>Current Store Deals</h2>
+
+        <div class="dealcardItems">
+
+          <div class="dealcard">
+            <img src="images/home_page/deal1.jpg" alt="Pizza-Image" class="dealcardImage dealcardItem">
+            <h3><span class="dealfoodtitle">3 Large traditional pizzas + 2 sides</span> From <span class="dealfoodprice">$30.1</span> Pick Up *</h3>
+            <p class="dealfood-details">
+              3 Large traditional pizzas + 2 sides <br>
+              Offer Code : 1026437 <br>
+              Conditions apply. Only available for pick up. Expires on 12-05-2020 <br>
+            </p>
+            <div class="dealcardBar dealcardItem">
+              <button class="dealbutton" type="button">ADD TO CART</button>
+            </div>
+          </div>
+
+          <div class="dealcard">
+            <img src="images/home_page/deal2.jpg" alt="Pizza-Image" class="dealcardImage dealcardItem">
+            <h3><span class="dealfoodtitle">3 Large traditional pizzas + 2 sides</span> From <span class="dealfoodprice">$30.1</span> Pick Up *</h3>
+            <p class="dealfood-details">
+              3 Large traditional pizzas + 2 sides <br>
+              Offer Code : 1026437 <br>
+              Conditions apply. Only available for pick up. Expires on 12-05-2020 <br>
+            </p>
+            <div class="dealcardBar dealcardItem">
+              <button class="dealbutton" type="button">ADD TO CART</button>
+            </div>
+          </div>
+
+          <div class="dealcard">
+            <img src="images/home_page/deal2.jpg" alt="Pasta-Image" class="dealcardImage dealcardItem">
+            <h3><span class="dealfoodtitle">3 Large traditional pizzas + 2 sides</span> From <span class="dealfoodprice">$30.1</span> Pick Up *</h3>
+            <p class="dealfood-details">
+              3 Large traditional pizzas + 2 sides <br>
+              Offer Code : 1026437 <br>
+              Conditions apply. Only available for pick up. Expires on 12-05-2020 <br>
+            </p>
+            <div class="dealcardBar dealcardItem">
+              <button class="dealbutton" type="button">ADD TO CART</button>
+            </div>
+          </div>
+
+        </div>
 
     </div>
     <footer class = "container">
