added relevant content to the home page special deal menu cards

--- a/index.html
+++ b/index.html
@@ -54,41 +54,41 @@
         <div class="dealcardItems">
 
           <div class="dealcard">
-            <img src="images/home_page/deal1.jpg" alt="Pizza-Image" class="dealcardImage dealcardItem">
-            <h3><span class="dealfoodtitle">3 Large traditional pizzas + 2 sides</span> From <span class="dealfoodprice">$30.1</span> Pick Up *</h3>
-            <p class="dealfood-details">
-              3 Large traditional pizzas + 2 sides <br>
-              Offer Code : 1026437 <br>
-              Conditions apply. Only available for pick up. Expires on 12-05-2020 <br>
-            </p>
-            <div class="dealcardBar dealcardItem">
-              <button class="dealbutton" type="button">ADD TO CART</button>
-            </div>
-          </div>
-
-          <div class="dealcard">
             <img src="images/home_page/deal2.jpg" alt="Pizza-Image" class="dealcardImage dealcardItem">
-            <h3><span class="dealfoodtitle">3 Large traditional pizzas + 2 sides</span> From <span class="dealfoodprice">$30.1</span> Pick Up *</h3>
+            <h3><span class="dealfoodtitle">2 Large Spaghetti Alla Bolognese + 1 Calamri Fritti</span> From <span class="dealfoodprice">$29.99</span> Pick Up Only*</h3>
             <p class="dealfood-details">
-              3 Large traditional pizzas + 2 sides <br>
-              Offer Code : 1026437 <br>
-              Conditions apply. Only available for pick up. Expires on 12-05-2020 <br>
+              2 Large Spaghetti Alla Bolognese + 1 Calamri Fritti <br>
+              Offer Code : 9725163 <br>
+              Conditions apply. Only available for pick up. Expires on 12-06-2020 <br>
             </p>
             <div class="dealcardBar dealcardItem">
-              <button class="dealbutton" type="button">ADD TO CART</button>
+              <button class="dealbutton" type="button">ORDER NOW</button>
             </div>
           </div>
 
           <div class="dealcard">
-            <img src="images/home_page/deal2.jpg" alt="Pasta-Image" class="dealcardImage dealcardItem">
-            <h3><span class="dealfoodtitle">3 Large traditional pizzas + 2 sides</span> From <span class="dealfoodprice">$30.1</span> Pick Up *</h3>
+            <img src="images/home_page/deal3.jpg" alt="Pizza-Image" class="dealcardImage dealcardItem">
+            <h3><span class="dealfoodtitle">2 Medium Caesar Salads + 2 drinks</span> From <span class="dealfoodprice">$19.99</span> Pick Up and Delivery*</h3>
             <p class="dealfood-details">
-              3 Large traditional pizzas + 2 sides <br>
+              2 Medium Caesar Salads + 2 drinks <br>
               Offer Code : 1026437 <br>
-              Conditions apply. Only available for pick up. Expires on 12-05-2020 <br>
+              Conditions apply. Available for pick up and delivery. Expires on 02-06-2020 <br>
             </p>
             <div class="dealcardBar dealcardItem">
-              <button class="dealbutton" type="button">ADD TO CART</button>
+              <button class="dealbutton" type="button">ORDER NOW</button>
+            </div>
+          </div>
+
+          <div class="dealcard">
+            <img src="images/home_page/deal1.jpg" alt="Pasta-Image" class="dealcardImage dealcardItem">
+            <h3><span class="dealfoodtitle">3 Large traditional pizzas + 2 sides</span> From <span class="dealfoodprice">$29.99</span> Pick Up Only*</h3>
+            <p class="dealfood-details">
+              3 Large traditional pizzas + 2 sides <br>
+              Offer Code : 2314457 <br>
+              Conditions apply. Only available for pick up. Expires on 01-06-2020 <br>
+            </p>
+            <div class="dealcardBar dealcardItem">
+              <button class="dealbutton" type="button">ORDER NOW</button>
             </div>
           </div>
 
